Fix spacing issues with grid items expanding out of defined container width/height, removed the grid items width/height to make it auto-adjust as the grid changes size

--- a/styles.css
+++ b/styles.css
@@ -17,21 +17,19 @@ body {
 }
 
 #container {
-    width: 399px;
-    height: 399px;
+    width: 500px;
+    height: 500px;
     display: grid;
     margin: auto;
     justify-content: center;
     row-gap: 1px;
     column-gap: 1px;
-    /*grid-template-columns: 1fr 1fr 1fr 1fr;*/
-    /*grid-template-columns: repeat(16, 1fr); /* Isto kao ovo gore*/
     background-color: white;
 }
 
 .cell {
-    height: 20px;
-    width: 20px;
+    /*height: 20px;
+    width: 20px;*/
     border: 2px solid lightcoral ;
 }
 
